finalized home page and added images

--- a/index.html
+++ b/index.html
@@ -28,48 +28,48 @@
                         <li class="nav-item">
                             <a class="nav-link" href="pages/music.html">Music</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
-                              Store
-                            </a>
-                            <ul class="dropdown-menu store-menu">
-                              <li class="nav-item">
-                                <a class="nav-link" href="pages/store.html">Storefront</a>
-                              </li>
-                              <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-                                  Collections
-                                </a>
-                                <ul class="dropdown-menu store-menu">
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
-                                </ul>
-                              </li>
-                              <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"> 
-                                  Categories
-                                </a>
-                                <ul class="dropdown-menu store-menu">
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
-                                </ul>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="pages/Store_Subpages/all.html">All</a>
-                              </li>
-                            </ul>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/tour.html">Tour</a>
                         </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
+                            Store
+                          </a>
+                          <ul class="dropdown-menu store-menu">
+                            <li class="nav-item">
+                              <a class="nav-link" href="pages/store.html">Storefront</a>
+                            </li>
+                            <li class="sub-menu">
+                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+                                Collections
+                              </a>
+                              <ul class="dropdown-menu store-menu">
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                              </ul>
+                            </li>
+                            <li class="sub-menu">
+                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"> 
+                                Categories
+                              </a>
+                              <ul class="dropdown-menu store-menu">
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
+                              </ul>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="pages/Store_Subpages/all.html">All</a>
+                            </li>
+                          </ul>
+                      </li>
                         <li class="nav-item">
                           <a class="nav-link" href="pages/checkout.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -83,7 +83,7 @@
       </nav>
 
 
-      <div class="containter-fluid title-container d-flex justify-content-center">
+      <div class="d-flex bg-img container containter-fluid title-container justify-content-center">
           <img src="images/stage_fright.png" alt="logo" class="img-fluid logo-img">
       </div>
       <div class="bg-image d-flex container container-fluid GBNF-container justify-content-center align-items-center text-center pt-3">
@@ -159,7 +159,29 @@
         </div>
 
         <a href="pages/store.html" class="btn btn-primary store-button my-3">Check It Out!</a>
-      
+      </div>
+
+      <div class="d-flex bg-img container container-fluid justify-content-center align-items-center tour-container">
+        <div class="row py-3">
+          <div class="col">
+            <h1>Scream Fest</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card mx-auto mb-4 p-2" style="width: 50%;">
+              <img src="images/scream-fest.png" class="card-img-top" alt="..." width="auto" height="auto">
+              <div class="card-body">
+              <h5 class="card-title">Scream Fest North America Tour</h5>
+              <p class="card-text">This year marks the 4th annual "Scream Fest" North America tour.
+                Stage Fright will be traveling all across the U.S. from Detroid MI, to Phoenix AZ.
+                If you'd like to join in one the fun, find your city below and purchase a ticket!
+              </p>
+              <a href="pages/tour.html" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <script src="js/bootstrap.bundle.js"></script>
