Added keywords and descriptions

--- a/pages/Store_Subpages/Categories_Pages/other.html
+++ b/pages/Store_Subpages/Categories_Pages/other.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="keywords" content="Store, Stage, Fright, Stage Fright, Rock, Indie, Indie Rock, Accessories">
+        <meta name="description" content="The store page of a new indie rock band starting its first tour, showing all accessories offered in the store">
         <link rel="stylesheet" href="../../../css/bootstrap.min.css">
         <link rel="stylesheet" href="../../../css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
