--- a/pages/Tour_Subpages/charleston.html
+++ b/pages/Tour_Subpages/charleston.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="keywords" content="Tour, Stage, Fright, Stage Fright, Rock, Indie, Indie Rock, Screm, Fest, Screamfest, Scream Fest, Charleston">
+        <meta name="description" content="The tours page of a new indie rock band starting its first tour, talking about its show in Charleston">
         <link rel="stylesheet" href="../../css/bootstrap.min.css">
         <link rel="stylesheet" href="../../css/style.css">
         
