--- a/pages/music.html
+++ b/pages/music.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="keywords" content="Music, Stage, Fright, Stage Fright, Rock, Indie, Indie Rock, Gone but Not Forgotten, On a Ledge, Painted Face, Albums, Songs">
+        <meta name="description" content="The music page of a new indie rock band starting its first tour">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
