OaL image added

--- a/pages/music.html
+++ b/pages/music.html
@@ -89,12 +89,18 @@
           <div class="card mb-3 p-3 my-4 mx-4">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../images/GbNF.png" class="img-fluid rounded-start" alt="...">
+                <img src="../images/GBNF-album.png" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title"><strong>Gone But Not Forgotten</strong></h5>
-                  <p class="card-text">Come and listen to our long awaited album, Gone But Not Forgotten!</p>
+                  <p class="card-text"> 
+                    Come and listen to Stage Fright's newest album, Gone But Not Forgotten! Stage Fright's most critically acclaimed album.
+                    It has won multiple awards and has been nominated best rock album of the year. It tells the story of the global fear of being forgotten. Stream now on all platforms.
+                    <br>
+                    <br>
+                    <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -104,7 +110,7 @@
 
             <div class="col my-3 mx-4">
               <div class="card h-100 p-2">
-                <img src="../images/oal.png" class="card-img-top" alt="...">
+                <img src="../images/OaL-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">On a Ledge</h5>
                   <p class="card-text">This is our first album.</p>
