--- a/pages/music.html
+++ b/pages/music.html
@@ -137,7 +137,7 @@
                   <img src="../images/GBNF-album.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Gone But Not Forgotten</h5>
-                    <p class="card-text">This is the third and our most recent album.</p>
+                    <p class="card-text">This is the third and our most recent album. Check it out!</p>
                     <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
                   </div>
                 </div>
