fixed mobile support

--- a/pages/music.html
+++ b/pages/music.html
@@ -110,7 +110,7 @@
         
           <div class="row">
 
-            <div class="col my-3 mx-4">
+            <div class="col-md my-3 mx-4">
               <div class="card h-100 p-2">
                 <img src="../images/OaL-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -121,7 +121,7 @@
               </div>
             </div>
 
-            <div class="col my-3">
+            <div class="col-md my-3">
               <div class="card h-100 p-2">
                 <img src="../images/CoI.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -132,7 +132,7 @@
               </div>
             </div>
 
-              <div class="col my-3 mx-4">
+              <div class="col-md my-3 mx-4">
                 <div class="card h-100 p-2">
                   <img src="../images/GBNF-album.png" class="card-img-top" alt="...">
                   <div class="card-body">
