--- a/pages/music.html
+++ b/pages/music.html
@@ -123,7 +123,7 @@
 
             <div class="col-md my-3">
               <div class="card h-100 p-2">
-                <img src="../images/CoI.png" class="card-img-top" alt="...">
+                <img src="../images/PF-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Carnival of Insanity</h5>
                   <p class="card-text">This is our second album.</p>
