fixed ANOTHER mobile issue

--- a/pages/music.html
+++ b/pages/music.html
@@ -121,7 +121,7 @@
               </div>
             </div>
 
-            <div class="col-md my-3">
+            <div class="col-md my-3 mx-4">
               <div class="card h-100 p-2">
                 <img src="../images/PF-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
