--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Home, Stage, Fright, Stage Fright, Rock, Indie, Indie Rock">
-        <meta name="description" content="The home page of a new indie rock band starting its first tour">
+        <meta name="description" content="The home page of a new indie rock band starting its fourth tour">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -174,7 +174,7 @@
               <h5 class="card-title">Scream Fest North America Tour</h5>
               <p class="card-text">This year marks the 4th annual "Scream Fest" North America tour.
                 Stage Fright will be traveling all across the U.S. from Detroid MI, to Phoenix AZ.
-                If you'd like to join in one the fun, find your city below and purchase a ticket!
+                If you'd like to join in on the fun, find your city below and purchase a ticket!
               </p>
               <a href="pages/tour.html" class="btn btn-primary">Learn More</a>
               </div>
@@ -185,6 +185,9 @@
 
       <script src="js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+      <h6>Copyright &copy; 2025 Stage Fright</h6>
+    </footer>
 </html>
 
 <!--Skylar-->
