--- a/pages/Store_Subpages/Categories_Pages/albums.html
+++ b/pages/Store_Subpages/Categories_Pages/albums.html
@@ -89,7 +89,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/OaL-album.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                         <h5 class="card-title">On a Ledge</h5>
                         <p class="card-text">An album focusing on being on the brink of falling</p>
@@ -100,7 +100,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/PF-album.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                         <h5 class="card-title">Painted Face</h5>
                         <p class="card-text">An album focusing on clowns and facades</p>
@@ -111,7 +111,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                        <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                        <img src="../../../images/GBNF-album.png" class="card-img-top" alt="..." width="100" height="250">
                         <div class="card-body">
                             <h5 class="card-title">Gone but Not Forgotten</h5>
                             <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
@@ -123,4 +123,7 @@
 
         <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+      <h6>Copyright &copy; 2025 Stage Fright</h6>
+    </footer>
 </html>
