--- a/pages/Store_Subpages/Categories_Pages/posters.html
+++ b/pages/Store_Subpages/Categories_Pages/posters.html
@@ -157,4 +157,7 @@
 
         <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+        <h6>Copyright &copy; 2025 Stage Fright</h6>
+      </footer>
 </html>
