--- a/pages/Store_Subpages/all.html
+++ b/pages/Store_Subpages/all.html
@@ -274,7 +274,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../images/OaL-album.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                         <h5 class="card-title">On a Ledge</h5>
                         <p class="card-text">An album focusing on being on the brink of falling</p>
@@ -285,7 +285,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../images/PF-album.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                         <h5 class="card-title">Painted Face</h5>
                         <p class="card-text">An album focusing on clowns and facades</p>
@@ -296,7 +296,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                        <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                        <img src="../../images/GBNF-album.png" class="card-img-top" alt="..." width="100" height="250">
                         <div class="card-body">
                             <h5 class="card-title">Gone but Not Forgotten</h5>
                             <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
@@ -405,7 +405,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../images/OaL-album.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">OaL Album</h5>
                     <p class="card-text">Listen to songs such as The Leap, Impact, and more</p>
@@ -442,7 +442,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../images/PF-album.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">PF Album</h5>
                     <p class="card-text">Listen to orange such as Laughter, Fake, and more</p>
@@ -503,7 +503,7 @@
 
           <div class="col-md">
               <div class="card mx-auto" style="width: 50%;">
-                  <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                  <img src="../../images/GBNF-album.png" class="card-img-top" alt="..." width="100" height="250">
                   <div class="card-body">
                   <h5 class="card-title">GbNF Album</h5>
                   <p class="card-text">Listen to songs such as Drowning, Megalodon, and more</p>
@@ -526,4 +526,7 @@
 
         <script src="../../js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+        <h6>Copyright &copy; 2025 Stage Fright</h6>
+      </footer>
 </html>
