--- a/pages/music.html
+++ b/pages/music.html
@@ -87,6 +87,9 @@
 
         <script src="../js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+      <h6>Copyright &copy; 2025 Stage Fright</h6>
+    </footer>
 </html>
 
 <!--Mason-->
