--- a/pages/Store_Subpages/Categories_Pages/tops.html
+++ b/pages/Store_Subpages/Categories_Pages/tops.html
@@ -122,4 +122,7 @@
 
         <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+      <h6>Copyright &copy; 2025 Stage Fright</h6>
+    </footer>
 </html>
