--- a/pages/store.html
+++ b/pages/store.html
@@ -153,6 +153,9 @@
           
         <script src="../js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+      <h6>Copyright &copy; 2025 Stage Fright</h6>
+    </footer>
 </html>
 
 <!--Xander-->
