--- a/pages/tour.html
+++ b/pages/tour.html
@@ -88,7 +88,7 @@
 
             <div class="row">
                 <div class="col-md p-3 border border-dark h3"> Tickets avalible for 
-                    the Screamfest tour now! Picture under
+                    the Screamfest tour now! Locations under
                 </div>
             </div>
         </div>
@@ -96,56 +96,60 @@
             <div class="row gx-5">
                 <div class="col-md">
                   <div class="card mx-auto"style="min-width: 300px;">
-                      <div class="card-body">
-                        <a href="Tour_Subpages/phoenix.html"><h5>Phoenix</h5></a> <br>
-                        Come see Stage Fright performs their album On a Ledge in Phoneix Arizona. Click for more info.
-                      </div>
+                    <div class="card-body">
+                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Phoenix</h5></a> <br>
+                      Come see Stage Fright performs their album On a Ledge in Phoneix Arizona. Click for more info.
+                      <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
+                    </div>
                   </div>
                 </div>
                 <div class="col-md">
                   <div class="card mx-auto" style="min-width: 300px;">
-                      <div class="card-body">
-                        <a href="Tour_Subpages/detroit.html"><h5>Detroit</h5></a> <br>
-                        Come listen as Stage Fright sings their album Painted Face in Detroit Michigan. Click for more info.
-                      </div>
+                    <div class="card-body">
+                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Detroit</h5></a> <br>
+                      Come listen as Stage Fright sings their album Painted Face in Detroit Michigan. Click for more info.
+                      <br> <img src="../images/PF-album.png" alt="logo" width="150" height="150">
+                    </div>
                   </div>
                 </div>
             </div>
             <div class="row gx-5">
               <div class="col-md">
                 <div class="card mx-auto"style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Tour_Subpages/dallas.html"><h5>Dallas</h5></a> <br> 
-                      Come join the show as Stage Fright performs their latest album Gone But Not Forgotten in Dallas Texas.
-                      Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Dallas</h5></a> <br> 
+                    Come see  as Stage Fright performs their latest album Gone But Not Forgotten in Dallas Texas.
+                    Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
               <div class="col-md">
                 <div class="card mx-auto" style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Tour_Subpages/nashville.html"><h5>Nashville</h5></a> <br> 
-                      Come and listen as Stage Fright sings their album On a Ledge In Nashville Tennessee. Click for more info.
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Nashville</h5></a> <br> 
+                    Come and listen as Stage Fright sings their album On a Ledge In Nashville Tennessee. Click for more info.
+                    <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
             </div>
             <div class="row gx-5">
               <div class="col-md">
                 <div class="card mx-auto"style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Tour_Subpages/seattle.html"><h5>Seattle</h5></a> <br> 
-                  Come see as Stage Fright sings their album Painted Face in Seattle Washington. Click for more info.
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Seattle</h5></a> <br> 
+                    Come join the show as Stage Fright sings their album Painted Face in Seattle Washington. Click for more info.
+                    <br> <img src="../images/PF-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
               <div class="col-md">
                 <div class="card mx-auto" style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Tour_Subpages/charleston.html"><h5>Charleston</h5></a> <br> 
-                  Come join as Stage Fright performs their latest album Gone But Not Forgotton in Charleston South Carolina. 
-                  Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Charleston</h5></a> <br> 
+                    Come see as Stage Fright performs their latest album Gone But Not Forgotten in Charleston South Carolina. 
+                    Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
             </div>
@@ -153,6 +157,10 @@
 
         <script src="../js/bootstrap.bundle.js"></script>
     </body>
+    <footer>
+      <p>Contact us, <a href="mailto:nathanferguson8470@gmail.com"> email</a></p>
+      <h6>Copyright &copy; 2025 Stage Fright</h6>
+    </footer>
 </html>
 
 <!--Nathan-->
