barely changed anything

--- a/pages/store.html
+++ b/pages/store.html
@@ -89,7 +89,7 @@
 
       <div class="container-fluid">
 
-        <h1 class="text-danger">Latest Release: Gone But Not Forgotten</h1>
+        <h1>Latest Release: Gone But Not Forgotten</h1>
         <div class="col-lg store">
           <div id="storeCarousel" class="carousel slide carousel-fade">
               <div class="carousel-indicators">
