--- a/pages/Store_Subpages/Categories_Pages/tickets.html
+++ b/pages/Store_Subpages/Categories_Pages/tickets.html
@@ -92,7 +92,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Phoenix Arizona show </h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                    <a href="../../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Detroit Michigan show </h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                    <a href="../../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Dallas Texas show </h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                    <a href="../../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Nashville Tennessee show </h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                    <a href="../../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Seattle Washington show </h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                    <a href="../../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                     <div class="card-body">
                     <h5 class="card-title">Stage Fright: Charleston South Carolina show</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                    <a href="../../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
                     </div>
                 </div>
             </div>
