--- a/pages/tour.html
+++ b/pages/tour.html
@@ -98,7 +98,7 @@
                   <div class="card mx-auto"style="min-width: 300px;">
                       <div class="card-body">
                         <a href="Tour_Subpages/phoenix.html"><h5>Phoenix</h5></a> <br>
-                        Come see Stage Fright performs their album On a Ledge in Phoneix Arizona. Click for more info.
+                        Come see Stage Fright performs their album On a Ledge in Phoneix, Arizona on June 2nd, 2025. Click for more info.
                       </div>
                   </div>
                 </div>
@@ -106,7 +106,7 @@
                   <div class="card mx-auto" style="min-width: 300px;">
                       <div class="card-body">
                         <a href="Tour_Subpages/detroit.html"><h5>Detroit</h5></a> <br>
-                        Come listen as Stage Fright sings their album Painted Face in Detroit Michigan. Click for more info.
+                        Come listen as Stage Fright sings their album Painted Face in Detroit, Michigan on June 9th, 2025. Click for more info.
                       </div>
                   </div>
                 </div>
@@ -116,7 +116,7 @@
                 <div class="card mx-auto"style="min-width: 300px;">
                     <div class="card-body">
                       <a href="Tour_Subpages/dallas.html"><h5>Dallas</h5></a> <br> 
-                      Come join the show as Stage Fright performs their latest album Gone But Not Forgotten in Dallas Texas.
+                      Come join the show as Stage Fright performs their latest album Gone But Not Forgotten in Dallas, Texas on June 16th, 2025.
                       Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                 <div class="card mx-auto" style="min-width: 300px;">
                     <div class="card-body">
                       <a href="Tour_Subpages/nashville.html"><h5>Nashville</h5></a> <br> 
-                      Come and listen as Stage Fright sings their album On a Ledge In Nashville Tennessee. Click for more info.
+                      Come and listen as Stage Fright sings their album On a Ledge In Nashville, Tennessee on June 23rd, 2025. Click for more info.
                     </div>
                 </div>
               </div>
@@ -135,7 +135,7 @@
                 <div class="card mx-auto"style="min-width: 300px;">
                     <div class="card-body">
                       <a href="Tour_Subpages/seattle.html"><h5>Seattle</h5></a> <br> 
-                  Come see as Stage Fright sings their album Painted Face in Seattle Washington. Click for more info.
+                  Come see as Stage Fright sings their album Painted Face in Seattle, Washington on June 30th, 2025. Click for more info.
                     </div>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                 <div class="card mx-auto" style="min-width: 300px;">
                     <div class="card-body">
                       <a href="Tour_Subpages/charleston.html"><h5>Charleston</h5></a> <br> 
-                  Come join as Stage Fright performs their latest album Gone But Not Forgotton in Charleston South Carolina. 
+                  Come join as Stage Fright performs their latest album Gone But Not Forgotton in Charleston, South Carolina on July 7th, 2025. 
                   Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
                     </div>
                 </div>
