--- a/pages/tour.html
+++ b/pages/tour.html
@@ -154,7 +154,9 @@
         <script src="../js/bootstrap.bundle.js"></script>
     </body>
     <footer>
-      <p>Contact us, <a href="mailto:nathanferguson8470@gmail.com"> email</a></p>
+      <h3>Contact us</h3>
+      <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
+      <p>Booking: <a href="booking.html">booking.html</a></p>
       <h6>Copyright &copy; 2025 Stage Fright</h6>
     </footer>
 </html>
