--- a/pages/Store_Subpages/all.html
+++ b/pages/Store_Subpages/all.html
@@ -518,7 +518,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Show 6: GbNF Ticket</h5>
                 <p class="card-text">Come to see Stage Fright perform the full Gone but Not Forgotten album at the final show of their celebration tour</p>
-                <a href="#" class="btn btn-primary">~$25.00 | Take a look</a>
+                <a href="../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
                 </div>
             </div>
         </div>
