indicators for albums

--- a/pages/music.html
+++ b/pages/music.html
@@ -89,6 +89,11 @@
 
          <div class="container-fluid card-container">
           <div class="card mb-3 p-3 my-4 mx-4">
+            <div class="card-header">
+              <div id="featured">
+                Featured Album
+              </div>
+            </div>
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="../images/GBNF-album.png" class="img-fluid rounded-start" alt="...">
@@ -98,14 +103,29 @@
                   <h5 class="card-title"><strong>Gone But Not Forgotten</strong></h5>
                   <p class="card-text"> 
                     Come and listen to Stage Fright's newest album, Gone But Not Forgotten! Stage Fright's most critically acclaimed album.
-                    It has won multiple awards and has been nominated best rock album of the year. It tells the story of the global fear of being forgotten. Stream now on all platforms.
+                    It has won multiple awards and has been nominated best rock album of the year. It tells the story of the global fear of being forgotten. 
+                    Stream now on all platforms.
                     <br>
                     <br>
-                    <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
+                    <div class="btn-group">
+                      <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
+                      <a href="../pages/tour.html" class="btn btn-primary">Find a Screamfest tour here!</a>
+                    </div>
                   </p>
                 </div>
               </div>
             </div>
+            <div class="card-footer text-body-secondary">
+              January 2025 to March 2025
+            </div>
+          </div>
+
+          <div class="albumEmphasis">
+            <p>
+              <h1>
+                ALL ALBUMS
+              </h1>
+            </p>
           </div>
         
           <div class="row">
