--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="row">
           <div class="col">
             <div class="card mx-auto mb-4 p-2" style="width: 50%;">
-              <img src="images/scream-fest.png" class="card-img-top" alt="..." width="auto" height="auto">
+              <img src="images/scream-fest.png" class="card-img-top" alt="...">
               <div class="card-body">
               <h5 class="card-title">Scream Fest North America Tour</h5>
               <p class="card-text">This year marks the 4th annual "Scream Fest" North America tour.
