made channges to store and index

--- a/index.html
+++ b/index.html
@@ -100,62 +100,61 @@
       </div>
 
 
-      <div class="d-flex container container-fluid store-container justify-content-center align-items-center bg-dark">
+      <div class="d-flex container container-fluid store-container justify-content-center align-items-center">
         <div class="row py-3">
           <h1>New Merchandise</h1>
         </div>
         <div class="row">
           <div class="col-lg store">
             <div id="storeCarousel" class="carousel slide carousel-fade">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active c-item">
-                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5 class="text-primary">Tops</h5>
-                    </div>
-                  </div>
-                  <div class="carousel-item c-item">
-                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5 class="text-primary">Hats</h5>
-                    </div>
-                  </div>
-                  <div class="carousel-item c-item">
-                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5 class="text-primary">Accessories</h5>
-                    </div>
-                  </div>
-                  <div class="carousel-item c-item">
-                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5 class="text-primary">Posters</h5>
-                    </div>
-                  </div>
-                  <div class="carousel-item c-item">
-                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5 class="text-primary">Albums</h5>
+              <div class="carousel-inner">
+                <div class="carousel-item active c-item">
+                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-primary">Tops</h5>
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#storeCarousel" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#storeCarousel" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                </button>
+                <div class="carousel-item c-item">
+                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-primary">Hats</h5>
+                  </div>
+                </div>
+                <div class="carousel-item c-item">
+                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-primary">Accessories</h5>
+                  </div>
+                </div>
+                <div class="carousel-item c-item">
+                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-primary">Posters</h5>
+                  </div>
+                </div>
+                <div class="carousel-item c-item">
+                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-primary">Albums</h5>
+                  </div>
+                </div>
+                <div class="carousel-item c-item">
+                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 class="text-primary">Tickets</h5>
+                  </div>
+                </div>
               </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#storeCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#storeCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              </button>
             </div>
           </div>
         </div>
+
 
         <a href="pages/store.html" class="btn btn-primary store-button my-3">Check It Out!</a>
       </div>
@@ -169,7 +168,7 @@
         <div class="row">
           <div class="col">
             <div class="card mx-auto mb-4 p-2" style="width: 50%;">
-              <img src="images/scream-fest.png" class="card-img-top" alt="..." width="auto" height="auto">
+              <img src="images/scream-fest.png" class="card-img-top" alt="...">
               <div class="card-body">
               <h5 class="card-title">Scream Fest North America Tour</h5>
               <p class="card-text">This year marks the 4th annual "Scream Fest" North America tour.
@@ -179,6 +178,46 @@
               <a href="pages/tour.html" class="btn btn-primary">Learn More</a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex container container-fluid justify-content-center align-items-center about-container">
+        <div class="row py-3">
+          <div class="col">
+            <h1>About Stage Fright</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p>
+              Stage Fright started as just a couple of friends making music with no real idea of where it would go.
+              Now however, Stage Fright has become one of the most renound rock bands of the 21st century.
+              With more grammies than you can count, hundreds of thousands of monthly listeners across all platforms, and 
+              three albums under their belt, they could only be described as the champions of the modern rock world.
+              <br>
+              <br>
+              Their goal as a band is to convey the feeling of various fears through music. they started with 
+              their debut album <em>On a Ledge</em> was made to convey the classic fear of heights. This album
+              was Stage Fright's "adjustment period" as they said, where they were figuring out their sound,
+              and experimenting with different areas of music. This album was more "metal-heavy" as described 
+              by critics, as they were still trying to figure out what they wanted to sound like.
+              <br>
+              <br>
+              They then came out with the sleeper hit <em>Painted Face</em>, which really put Stage Fright in the public
+              eye. This album was focused on the fear of clowns, which was displayed with their experimental use of 
+              clown horns, circus music samples, and more that transported the listener into a terrifying yet thrilling
+              experience. <em>Painted Face</em>, as of 1/10/25, has over 960,000 plays in total. This album gave Stage
+              Fright the boost they needed to make themselves known in the modern rock world.
+              <br>
+              <br>
+              With Stage Fright's most recent album <em>Gone But Not Forgotten</em>, They truly sky-rocketed to the top
+              of the rock scene. This album has a slighly deeper meaning and fear behind it, one that has cause much dismay
+              to human kind since the dawn of our existence, that fear was being forgotten. GBNF <em>(Gone But Not Forgotten)</em>
+              has been said to be Stage Fright's most experimental album. Their unique use of reverse sound effects, 
+              classical instruments, and haunting vocal sound effects, GBNF has been almost collectively agreed to be Stage Fright's 
+              most in-depth album. This album alone won Stage Fright 3 grammies, and over 900,000 mothly listeners. Now us Stage Fright
+              Fenatics can only wait for Stage Fright's newest release and see what they have in store.
+            </p>
           </div>
         </div>
       </div>
