--- a/pages/tour.html
+++ b/pages/tour.html
@@ -96,18 +96,20 @@
             <div class="row gx-5">
                 <div class="col-md">
                   <div class="card mx-auto"style="min-width: 300px;">
-                      <div class="card-body">
-                        <a href="Tour_Subpages/phoenix.html"><h5>Phoenix</h5></a> <br>
-                        Come see Stage Fright performs their album On a Ledge in Phoneix, Arizona on June 2nd, 2025. Click for more info.
-                      </div>
+                    <div class="card-body">
+                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Phoenix</h5></a> <br>
+                      Come see Stage Fright performs their album On a Ledge in Phoneix, Arizona on June 2nd, 2025. Click for more info.
+                      <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
+                    </div>
                   </div>
                 </div>
                 <div class="col-md">
                   <div class="card mx-auto" style="min-width: 300px;">
-                      <div class="card-body">
-                        <a href="Tour_Subpages/detroit.html"><h5>Detroit</h5></a> <br>
-                        Come listen as Stage Fright sings their album Painted Face in Detroit, Michigan on June 9th, 2025. Click for more info.
-                      </div>
+                    <div class="card-body">
+                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Detroit</h5></a> <br>
+                      Come listen as Stage Fright sings their album Painted Face in Detroit, Michigan on June 9th, 2025. Click for more info.
+                      <br> <img src="../images/PF-album.png" alt="logo" width="150" height="150">
+                    </div>
                   </div>
                 </div>
             </div>
@@ -115,7 +117,7 @@
               <div class="col-md">
                 <div class="card mx-auto"style="min-width: 300px;">
                     <div class="card-body">
-                      <a href="Tour_Subpages/dallas.html"><h5>Dallas</h5></a> <br> 
+                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Dallas</h5></a> <br> 
                       Come join the show as Stage Fright performs their latest album Gone But Not Forgotten in Dallas, Texas on June 16th, 2025.
                       Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
                     </div>
@@ -123,42 +125,44 @@
               </div>
               <div class="col-md">
                 <div class="card mx-auto" style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Tour_Subpages/nashville.html"><h5>Nashville</h5></a> <br> 
-                      Come and listen as Stage Fright sings their album On a Ledge In Nashville, Tennessee on June 23rd, 2025. Click for more info.
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Nashville</h5></a> <br> 
+                    Come and listen as Stage Fright sings their album On a Ledge In Nashville, Tennessee on June 23rd, 2025. Click for more info.
+                    <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
             </div>
             <div class="row gx-5">
               <div class="col-md">
                 <div class="card mx-auto"style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Tour_Subpages/seattle.html"><h5>Seattle</h5></a> <br> 
-                  Come see as Stage Fright sings their album Painted Face in Seattle, Washington on June 30th, 2025. Click for more info.
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Seattle</h5></a> <br> 
+                    Come see as Stage Fright sings their album Painted Face in Seattle, Washington on June 30th, 2025. Click for more info.
+                    <br> <img src="../images/PF-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
               <div class="col-md">
                 <div class="card mx-auto" style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Tour_Subpages/charleston.html"><h5>Charleston</h5></a> <br> 
-                  Come join as Stage Fright performs their latest album Gone But Not Forgotton in Charleston, South Carolina on July 7th, 2025. 
-                  Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Charleston</h5></a> <br> 
+                    Come join as Stage Fright performs their latest album Gone But Not Forgotton in Charleston, South Carolina on July 7th, 2025. 
+                    Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
             </div>
         </div>       
 
         <script src="../js/bootstrap.bundle.js"></script>
+        <footer>
+          <h3>Contact us</h3>
+          <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
+          <p>Booking: <a href="booking.html">booking.html</a></p>
+          <h6>Copyright &copy; 2025 Stage Fright</h6>
+        </footer>
     </body>
-    <footer>
-      <h3>Contact us</h3>
-      <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
-      <p>Booking: <a href="booking.html">booking.html</a></p>
-      <h6>Copyright &copy; 2025 Stage Fright</h6>
-    </footer>
 </html>
 
 <!--Nathan-->
