--- a/pages/music.html
+++ b/pages/music.html
@@ -135,7 +135,7 @@
                 <img src="../images/OaL-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">On a Ledge</h5>
-                  <p class="card-text">This is our first album.</p>
+                  <p class="card-text">Our first album, created in August 2024!</p>
                   <a href="../pages/Store_Subpages/Collections_Pages/col2.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
@@ -146,7 +146,7 @@
                 <img src="../images/PF-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Carnival of Insanity</h5>
-                  <p class="card-text">This is our second album.</p>
+                  <p class="card-text">Our second album, created after On a Ledge on October 2024!</p>
                   <a href="../pages/Store_Subpages/Collections_Pages/col4.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
@@ -157,7 +157,7 @@
                   <img src="../images/GBNF-album.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Gone But Not Forgotten</h5>
-                    <p class="card-text">This is the third and our most recent album. Check it out!</p>
+                    <p class="card-text">This is the third and our most recent album. We started making this in December 2024! Check it out!</p>
                     <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
                   </div>
                 </div>
@@ -167,9 +167,21 @@
 
         <script src="../js/bootstrap.bundle.js"></script>
         <footer>
-          <h3>Contact us</h3>
-          <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
-          <p>Booking: <a href="booking.html">booking.html</a></p>
+          <h3>Contact Us</h3>
+          <p>
+            Through Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a>
+            <br>
+            Ticket Booking: <a href="booking.html">Here</a>
+            <br>
+            Customer Service: <a href="service.html">Here</a>
+            <br>
+            <div class="flex-container">
+              <a href="https://www.youtube.com"><img src="../images/youtube.png" alt=""></a>
+              <a href="https://www.spotify.com"><img src="../images/spotify.png" alt=""></a>
+              <a href="https://www.x.com"><img src="../images/x.png" alt=""></a>
+              <a href="https://www.instagram.com"><img src="../images/instagram.png" alt=""></a>
+            </div>
+          </p>
           <h6>Copyright &copy; 2025 Stage Fright</h6>
         </footer>
     </body>
